--- a/src/components/carousal/styles.module.css
+++ b/src/components/carousal/styles.module.css
@@ -2,13 +2,13 @@
     margin: 0;
 }
 
-body {
+/* body {
     font-family: sans-serif;
     height: 100vh;
     display: flex;
     align-items: center;
     overflow-x: hidden;
-}
+} */
 
 .container {
     display: flex;
